kubernetes/Cluster-Int-Temp/deployments/apps/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: apps
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: lscr.io/linuxserver/code-server:4.23.1
          volumeMounts:
            - name: homepage
              mountPath: /pvcs/homepage
      volumes:
        - name: homepage
          persistentVolumeClaim:
            claimName: homepage
